fixing cta on accomodation

--- a/accommodation.html
+++ b/accommodation.html
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="navcta">
-                    <a class="pill" href="tel:01759304735"> Call <strong>01759 304735</strong> </a>
+                    <div class="pill" title="Telephone">Call <strong>01759 304735</strong></div>
                 </div>
             </div>
         </header>
