--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
         <meta name="description" content="Millington Village Hall in the Yorkshire Wolds — hire, accommodation, and local information." />
-        <link rel="stylesheet" href="site.css" />
+        <link rel="stylesheet" href="site.css?v=1771252666" />
     </head>
     <body>
         <header class="topbar">
