css tweaks and styling

--- a/accommodation.html
+++ b/accommodation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="site.css?v=1771252666" />
+        <link rel="stylesheet" href="style/site.css?v=1771334159" />
     </head>
     <body>
         <header class="topbar">
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="navcta">
-                    <div class="pill" title="Telephone">Call <strong>01759 304735</strong></div>
+                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
                 </div>
             </div>
         </header>
@@ -39,7 +39,7 @@
                     <div class="heroOverlay" aria-hidden="true"></div>
                     <div class="heroContent">
                         <div class="kicker"><span class="dot" aria-hidden="true"></span>Accommodation</div>
-                        <h2>Camping-barn style stays — simple, warm, and practical.</h2>
+                        <h2>Camping-barn style stays - simple, warm, and practical.</h2>
                         <p>We offer basic facilities for overnight accommodation: a well-equipped kitchen; indoor toilets; electric heating; hot water and drying rack; and a newly fitted electric shower.</p>
                         <div class="actions">
                             <a class="btn primary" href="location.html">Check location</a>
@@ -50,22 +50,18 @@
 
                 <aside class="panel">
                     <h3>Key details</h3>
-                    <div class="small">Info preserved from the original page, presented cleanly.</div>
-                    <div class="hr"></div>
 
                     <div class="kv">
-                        <div>Capacity</div>
-                        <div>Up to 10 camp beds / sleeping mats (single room)</div>
-                        <div>Bring</div>
-                        <div>Your own sleeping bag, towel, etc.</div>
-                        <div>Payment</div>
-                        <div>Bank transfer (details on booking form)</div>
+                        <div><div><strong>Capacity</strong></div>Up to 10 camp beds / sleeping mats (single room)</div>
+                        <div><div><strong>Bring</strong></div>Your own sleeping bag, towel, etc.</div>
+                        
+                        <div><div><strong>Payment</strong></div>Bank transfer (details on booking form)</div>
                         <div>Email</div>
                         <div><a class="inline" href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                     </div>
 
                     <div class="hr"></div>
-
+                    <h3>Facilities</h3>
                     <ul class="badgeList">
                         <li>Kitchen</li>
                         <li>Indoor toilets</li>
@@ -83,7 +79,7 @@
                         <img class="thumb" src="droppedImage_1.png" alt="Kitchen facilities" />
                         <div>
                             <h4>Well-equipped kitchen</h4>
-                            <p>Perfect for groups — prepare meals, tea/coffee, and breakfast on-site.</p>
+                            <p>Perfect for groups - prepare meals, tea/coffee, and breakfast on-site.</p>
                         </div>
                     </div>
                 </article>
@@ -109,7 +105,7 @@
                     <div class="inner">
                         <h4>Booking</h4>
                         <p>
-                            You are advised to contact <strong>01759 304735</strong> or <strong>01759 301931</strong>, or email
+                            You are advised to contact <strong>01759 301931</strong>, or email
                             <a class="inline" href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a>
                             to ensure the date you want is available.
                         </p>
