--- a/around.html
+++ b/around.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Around Millington • Millington Village Hall</title>
         <meta name="description" content="Walks, countryside, and places of interest around Millington." />
-        <link rel="stylesheet" href="site.css?v=1771252666" />
+        <link rel="stylesheet" href="style/site.css?v=1771334159" />
     </head>
     <body>
         <header class="topbar">
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="navcta">
-                    <div class="pill">Call <strong>01759 304735</strong></div>
+                    <div class="pill">Call <strong>01759 301931</strong></div>
                 </div>
             </div>
         </header>
@@ -40,7 +40,7 @@
                     <div class="heroContent">
                         <div class="kicker"><span class="dot" aria-hidden="true"></span>Around Millington</div>
                         <h2>Wolds walks, local history, and quiet lanes.</h2>
-                        <p>Apart from the countryside, the area offers plenty of interest — from prehistoric sites to nearby market towns and well-loved walking routes.</p>
+                        <p>Apart from the countryside, the area offers plenty of interest - from prehistoric sites to nearby market towns and well-loved walking routes.</p>
                         <div class="actions">
                             <a class="btn primary" href="location.html">Plan your route</a>
                             <a class="btn" href="accommodation.html">Stay overnight</a>
@@ -50,39 +50,31 @@
 
                 <aside class="panel">
                     <h3>Highlights</h3>
-                    <div class="small">Key points from the original “Around Millington” page.</div>
-                    <div class="hr"></div>
-
-                    <div class="badgeRow">
-                        <div class="badge">Millington Pastures & Wood (SSSI)</div>
-                        <div class="badge">Iron Age & Roman sites</div>
-                        <div class="badge">Pocklington ~ 3 miles</div>
-                        <div class="badge">Burnby Hall Gardens</div>
-                    </div>
+                    <ul class="badgeList">
+                        <li>Millington Pastures & Wood (SSSI)</li>
+                        <li>Iron Age & Roman sites</li>
+                        <li>Pocklington ~ 3 miles</li>
+                        <li>Burnby Hall Gardens</li>
+                    </ul>
 
                     <div class="hr"></div>
 
-                    <ul class="infoList">
+                    <h3>Walks</h3>
+                    <ul class="badgeList">
+                        <li>Wolds Way</li>
+                        <li>Chalkland Way</li>
+                        <li>Minster Way</li>
+                        <li>Wilberforce Way</li>
+                    </ul>
+                    <div class="hr"></div>
+
+                    <h3>Food</h3>
+                    <ul class="badgeList">
                         <li>
-                            <strong>Walks</strong>
-                            <ul>
-                                <li>Wolds Way</li>
-                                <li>Chalkland Way</li>
-                                <li>Minster Way</li>
-                                <li>Wilberforce Way</li>
-                            </ul>
+                            <a class="inline" href="https://thegaitinn.co.uk/" target="_blank" rel="noopener"> The Gait Inn </a>
                         </li>
-
                         <li>
-                            <strong>Food</strong>
-                            <ul>
-                                <li>
-                                    <a class="inline" href="https://thegaitinn.co.uk/" target="_blank" rel="noopener"> The Gait Inn </a>
-                                </li>
-                                <li>
-                                    <a class="inline" href="https://www.ramblersrestmillington.co.uk/" target="_blank" rel="noopener"> Ramblers’ Rest Tea Room </a>
-                                </li>
-                            </ul>
+                            <a class="inline" href="https://www.ramblersrestmillington.co.uk/" target="_blank" rel="noopener"> Ramblers’ Rest Tea Room </a>
                         </li>
                     </ul>
                 </aside>
@@ -117,8 +109,8 @@
 
                 <article class="card">
                     <div class="inner">
-                        <h4>Great base for walkers</h4>
-                        <p>Millington is about half a mile from the Wolds Way and Chalkland Way. The Minster Way runs through the village, and the Wilberforce Way is close by — making the hall well placed for walkers.</p>
+                        <h4>Great base for walkers and cyclists</h4>
+                        <p>Millington is about half a mile from the Wolds Way and Chalkland Way. The Minster Way runs through the village, and the Wilberforce Way is close by - making the hall well placed for walkers and cyclists.</p>
                     </div>
                 </article>
 
