--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
-        <meta name="description" content="Millington Village Hall in the Yorkshire Wolds — hire, accommodation, and local information." />
-        <link rel="stylesheet" href="site.css?v=1771252666" />
+        <meta name="description" content="Millington Village Hall in the Yorkshire Wolds - hire, accommodation, and local information." />
+        <link rel="stylesheet" href="style/site.css?v=1771334159" />
     </head>
     <body>
         <header class="topbar">
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="navcta">
-                    <div class="pill" title="Telephone">Call <strong>01759 304735</strong></div>
+                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
                 </div>
             </div>
         </header>
@@ -50,35 +50,46 @@
                 </div>
 
                 <aside class="panel">
-                    <h3>At a glance</h3>
-                    <div class="small">A modern refresh of the original site, with the same core info.</div>
+                    <h3>Location</h3>
+                    <a
+                        target="_blank"
+                        href="https://www.google.com/maps/place/Millington+Village+Hall/@53.9555436,-0.7406538,17z/data=!3m1!4b1!4m6!3m5!1s0x4878d773d358d5fb:0x37ee18c2ca1404c8!8m2!3d53.9555405!4d-0.7357829!16s%2Fg%2F11v3fmdpxg?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D
+"
+                        >Church Lane, Millington (East Riding of Yorkshire)</a
+                    >
                     <div class="hr"></div>
 
-                    <div class="kv">
-                        <div>Location</div>
-                        <div>Church Lane, Millington (East Riding of Yorkshire)</div>
+                    <h3>Facilities</h3>
+                    <ul class="badgeList">
+                        <li>Heated hall</li>
+                        <li>Kitchen</li>
+                        <li>Toilets</li>
+                        <li>Electric shower</li>
+                    </ul>
+                    <div class="hr"></div>
 
-                        <div>Facilities</div>
-                        <div>Heated hall, carpeted, kitchen, toilets, electric shower</div>
+                    <h3>Use</h3>
+                    <ul class="badgeList">
+                        <li>Events</li>
+                        <li>Functions</li>
+                        <li>Meetings</li>
+                        <li>Field study centre (day use)</li>
+                        <li>Overnight stays</li>
+                    </ul>
 
-                        <div>Use</div>
-                        <div>Events, functions, meetings, field study centre (day use), overnight stays</div>
+                    <div class="hr"></div>
 
-                        <div>Telephone</div>
-                        <div>
-                            <ul class="phoneList">
-                                <li><a href="tel:01759304735">01759 304735</a></li>
-                                <li><a href="tel:01759301931">01759 301931</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    <h3>Features</h3>
+                    <ul class="badgeList">
+                        <li>Warm & welcoming</li>
+                        <li>Great for walkers and cyclists</li>
+                        <li>Kitchen on-site</li>
+                        <li>Overnight available</li>
+                    </ul>
 
-                    <div class="badgeRow" aria-label="Highlights">
-                        <div class="badge">Warm & welcoming</div>
-                        <div class="badge">Great for walkers</div>
-                        <div class="badge">Kitchen on-site</div>
-                        <div class="badge">Overnight available</div>
-                    </div>
+                    <div class="hr"></div>
+                    <div><strong>Telephone</strong></div>
+                    <div><a href="tel:01759301931">01759 301931</a></div>
                 </aside>
             </div>
         </section>
