--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="site.css?v=1771252666" />
+        <link rel="stylesheet" href="style/site.css?v=1771334159" />
     </head>
     <body>
         <header class="topbar">
@@ -20,14 +20,14 @@
                 </a>
 
                 <nav aria-label="Primary">
-                    <a href="index.html">Home</a>
+                    <a class="active" href="index.html">Home</a>
                     <a href="around.html">Around Millington</a>
                     <a href="accommodation.html">Accommodation</a>
-                    <a class="active" href="location.html">Location</a>
+                    <a href="location.html">Location</a>
                 </nav>
 
                 <div class="navcta">
-                    <div class="pill">Call <strong>01759 304735</strong></div>
+                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
                 </div>
             </div>
         </header>
@@ -40,7 +40,14 @@
                     <div class="heroContent">
                         <div class="kicker"><span class="dot" aria-hidden="true"></span>Location</div>
                         <h2>Where to find Millington.</h2>
-                        <p>Millington Village Hall is located on Church Lane, Millington (East Riding of Yorkshire).</p>
+                        <p>
+                            <a
+                                target="_blank"
+                                href="https://www.google.com/maps/place/Millington+Village+Hall/@53.9555436,-0.7406538,17z/data=!3m1!4b1!4m6!3m5!1s0x4878d773d358d5fb:0x37ee18c2ca1404c8!8m2!3d53.9555405!4d-0.7357829!16s%2Fg%2F11v3fmdpxg?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D
+"
+                                >Millington Village Hall is located on Church Lane, Millington (East Riding of Yorkshire).</a
+                            >
+                        </p>
                         <div class="actions">
                             <a class="btn primary" href="#map">Open map</a>
                             <a class="btn" href="accommodation.html">Accommodation</a>
@@ -53,18 +60,27 @@
                     <div class="small">Use the embedded map to get directions from your location.</div>
                     <div class="hr"></div>
                     <div class="kv">
-                        <div>Address</div>
-                        <div>Church Lane, Millington, East Riding of Yorkshire</div>
-                        <div>Nearby</div>
-                        <div>Pocklington (~3 miles)</div>
-                        <div>Phone</div>
-                        <div>01759 304735 • 01759 301931</div>
+                        <div>
+                            <div><strong>Address</strong></div>
+                            <a target="_blank" href="https://www.google.com/maps/place/Millington+Village+Hall/@53.9555436,-0.7406538,17z/data=!3m1!4b1!4m6!3m5!1s0x4878d773d358d5fb:0x37ee18c2ca1404c8!8m2!3d53.9555405!4d-0.7357829!16s%2Fg%2F11v3fmdpxg?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D">Church Lane, Millington, East Riding of Yorkshire</a>
+                        </div>
+                        <div class="br" />
+                        <div>
+                            <div><strong>Nearby</strong></div>
+                            Pocklington (~3 miles)
+                        </div>
+                        <div class="br" />
+                        <div>
+                            <div><strong>Phone</strong></div>
+                            <a href="tel:01759304735">01759 301931</a>
+                        </div>
                     </div>
-                    <div class="badgeRow">
-                        <div class="badge">Parking nearby</div>
-                        <div class="badge">Great walking base</div>
-                        <div class="badge">Rural & quiet</div>
-                    </div>
+
+                    <ul class="badgeList">
+                        <li class="badge">Parking nearby</li>
+                        <li class="badge">Great walking base</li>
+                        <li class="badge">Rural & quiet</li>
+                    </ul>
                 </aside>
             </div>
         </section>
