fixes for erasmus

--- a/around.html
+++ b/around.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Around Millington • Millington Village Hall</title>
         <meta name="description" content="Walks, countryside, and places of interest around Millington." />
-        <link rel="stylesheet" href="style/site.css?v=1771334159" />
+        <link rel="stylesheet" href="style/site.css?v=1771334529" />
     </head>
     <body>
         <header class="topbar">
@@ -85,10 +85,10 @@
             <section class="grid">
                 <article class="card">
                     <div class="inner media">
-                        <img class="thumb" src="EmmausWindow.jpg" alt="St Margaret’s Church Emmaus window" />
+                        <img class="thumb-full" src="EmmausWindow.jpg" alt="St Margaret’s Church Emmaus window" />
                         <div>
                             <h4>St Margaret’s Church</h4>
-                            <p>Millington village has St Margaret’s Church, including the Emmaus window installed in 2007.</p>
+                            <p>Tom Denny created a contemporary stained glass “Emmaus Window” for St Margaret’s Church in Millington, East Riding of Yorkshire, installed in 2007. The window depicts the biblical story of the Road to Emmaus, showing the risen Christ revealed to two disciples in the breaking of bread, while also incorporating elements of the local Yorkshire Wolds landscape. It is a notable modern addition to the historic Norman church and was dedicated by the Archbishop of York at the time of its installation.</p>
                         </div>
                     </div>
                 </article>
