--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
         <meta name="description" content="Millington Village Hall in the Yorkshire Wolds - hire, accommodation, and local information." />
-        <link rel="stylesheet" href="style/site.css?v=1771334159" />
+        <link rel="stylesheet" href="style/site.css?v=1771334529" />
     </head>
     <body>
         <header class="topbar">
@@ -122,10 +122,10 @@
 
                 <article class="card">
                     <div class="inner media">
-                        <img class="thumb" src="EmmausWindow.jpg" alt="St Margaret’s Church Emmaus window" />
+                        <img class="thumb-full" src="EmmausWindow.jpg" alt="St Margaret’s Church Emmaus window" />
                         <div>
                             <h4>Local heritage</h4>
-                            <p>Millington village includes St Margaret’s Church, with the Emmaus window installed in 2007.</p>
+                            <p>Tom Denny created a contemporary stained glass “Emmaus Window” for St Margaret’s Church in Millington, East Riding of Yorkshire, installed in 2007. The window depicts the biblical story of the Road to Emmaus, showing the risen Christ revealed to two disciples in the breaking of bread, while also incorporating elements of the local Yorkshire Wolds landscape. It is a notable modern addition to the historic Norman church and was dedicated by the Archbishop of York at the time of its installation.</p>
                         </div>
                     </div>
                 </article>
