--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="style/site.css?v=1771334529" />
+        <link rel="stylesheet" href="style/site.css?v=1771336375" />
     </head>
     <body>
         <header class="topbar">
@@ -20,10 +20,10 @@
                 </a>
 
                 <nav aria-label="Primary">
-                    <a class="active" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="around.html">Around Millington</a>
                     <a href="accommodation.html">Accommodation</a>
-                    <a href="location.html">Location</a>
+                    <a class="active" href="location.html">Location</a>
                 </nav>
 
                 <div class="navcta">
