--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Events | Millington Village Hall</title>
     <meta name="description" content="Events at Millington Village Hall in the Yorkshire Wolds." />
-    <link rel="stylesheet" href="style/site.css?v=1771336375" />
+    <link rel="stylesheet" href="style/site.css?v=1771336666" />
     <link rel="stylesheet" href="style/events.css?v=1.0.3" />
   </head>
 
@@ -59,7 +59,7 @@
             <div>Telephone</div>
             <div>
               <ul class="phoneList">
-                <li><a href="tel:01759304735">01759 301931</a></li>
+                <li><a href="tel:01759 301931">01759 301931</a></li>
               </ul>
             </div>
           </div>
@@ -98,7 +98,7 @@
 
     <footer>
       <div class="container foot">
-        <div>© <span id="y"></span> Millington Village Hall</div>
+        <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
         <div><a href="location.html">Location</a> • <a href="accommodation.html">Accommodation</a> • <a href="around.html">Around Millington</a></div>
       </div>
     </footer>
