--- a/accommodation.html
+++ b/accommodation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="style/site.css?v=1771336375" />
+        <link rel="stylesheet" href="style/site.css?v=1771336666" />
     </head>
     <body>
         <header class="topbar">
@@ -139,7 +139,7 @@
 
         <footer>
             <div class="container foot">
-                <div>© <span id="y"></span> Millington Village Hall</div>
+                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                 <div><a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="location.html">Location</a></div>
             </div>
         </footer>
