--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
         <meta name="description" content="Millington Village Hall in the Yorkshire Wolds - hire, accommodation, and local information." />
-        <link rel="stylesheet" href="style/site.css?v=1771336375" />
+        <link rel="stylesheet" href="style/site.css?v=1771336666" />
     </head>
     <body>
         <header class="topbar">
@@ -27,7 +27,7 @@
                 </nav>
 
                 <div class="navcta">
-                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
+                    <div class="pill" title="Telephone">Call <strong><a href="tel:01759 301931">01759 301931</a></strong></div>
                 </div>
             </div>
         </header>
@@ -134,7 +134,7 @@
 
         <footer>
             <div class="container foot">
-                <div>© <span id="y"></span> Millington Village Hall</div>
+                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                 <div><a href="location.html">Location</a> • <a href="accommodation.html">Accommodation</a> • <a href="around.html">Around Millington</a></div>
             </div>
         </footer>
