--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="style/site.css?v=1771336375" />
+        <link rel="stylesheet" href="style/site.css?v=1771336666" />
     </head>
     <body>
         <header class="topbar">
@@ -72,7 +72,7 @@
                         <div class="br" />
                         <div>
                             <div><strong>Phone</strong></div>
-                            <a href="tel:01759304735">01759 301931</a>
+                            <a href="tel:01759 301931">01759 301931</a>
                         </div>
                     </div>
 
@@ -113,7 +113,7 @@
 
         <footer>
             <div class="container foot">
-                <div>© <span id="y"></span> Millington Village Hall</div>
+                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                 <div><a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="accommodation.html">Accommodation</a></div>
             </div>
         </footer>
